--- a/test.html
+++ b/test.html
@@ -1,2 +1,13 @@
-строка 1
-строка 2
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ЕДИНЫЙ ЦЕНТР ЗАПИСИ НА МРТ, КТ, РЕНТГЕН ИССЛЕДОВАНИЯ</title>
+</head>
+<body>
+<div>
+    <img src="./img/mem.jpg" alt="тут должен быть мем">
+</div>
+</body>
+</html>
