--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
 </head>
 <body>
 <div>
-    <img src="./img/mem.jpg" alt="тут должен быть мем">
+    <img src="./img/mem.jpg" alt="тут должен быть мем" width="300"                                                                                                                                          height="300">
+
 </div>
 <main>
-    <ol>усидчивость</ol> <ol>усидчивость и дисциплина </ol> <ol>усидчивость и дисциплина</ol>
+    <ol>усидчивость
+    <li>усидчивость и дисциплина</li>
+    <li>усидчивость и дисциплина</li>
+    </ol>
     <a href="https://youtu.be/KaFjxLMsOuo">MUSIC</a> <br>
     <strong>Тут должен быть очень важный  текст</strong>
         <p><em>Hачало</em> повседневной работы по формированию</p> позиции требуют определения и уточнения направлений
         прогрессивного развития. Не следует, однако забывать, что постоянный количественный рост и сфера
         нашей активности <s>способствует подготовки и реализации направлений прогрессивного развития.
         Таким образом постоянное</s> информационно-пропагандистское обеспечение нашей деятельности представляет
-        собой <h1>интересный эксперимент</h1> проверки <u>системы</u> обучения кадров, соответствует насущным потребностям.
+        собой интересный эксперимент проверки <u>системы</u> обучения кадров, соответствует насущным потребностям.
         С другой стороны начало повседневной работы по формированию позиции позволяет выполнять важные задания
         по разработке новых предложений. <hr>Не следует, однако забывать, что укрепление<hr> и развитие структуры требуют
         от нас анализа системы обучения кадров, соответствует насущным потребностям.
-    <button><h3>НАЖАТЬ КНОПКУ УДЛЯ УДОВЛЕТВОРЕНИЯ <br>НАСУЩНЫХ ПОТРЕБНОСТЕЙ</h3></button> <br>
+    <button>НАЖАТЬ КНОПКУ УДЛЯ УДОВЛЕТВОРЕНИЯ <br>НАСУЩНЫХ ПОТРЕБНОСТЕЙ</button> <br>
         <textarea> хочу ввести сюда очень много текста</textarea>
-        <link>http://htmlbook.ru/html/a/href
+        
     </main>
 </body>
 </html>
